[tool.poetry]
name = "viz-submoduless"
version = "0.1.0"
description = ""
authors = ["sam bacha <sam@manifoldfinance.com>"]
license = "UPL-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydot = "^1.4.2"
click = "^8.1.7"
configparser = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
